force-app/main/default/objects/Docusign_Recipient_Setting__mdt/Docusign_Recipient_Setting__mdt.object-meta.xml
<CustomObject>
    <label>Docusign Recipient Setting</label>
    <pluralLabel>Docusign Recipient Settings</pluralLabel>
</CustomObject>