force-app/main/default/objects/Docusign_Recipient_Setting__mdt/fields/Recipient_Group__c.field-meta.xml
<CustomField>
    <fullName>Recipient_Group__c</fullName>
    <description>if more then 1 recipient should be informed this field will group them togather</description>
    <label>Recipient Group</label>
    <length>30</length>
    <required>true</required>
    <type>Text</type>
</CustomField>