force-app/main/default/objects/Docusign_Recipient_Setting__mdt/listViews/all_info.listView-meta.xml
<ListView>
    <fullName>all_info</fullName>
    <columns>First_Name__c</columns>
    <columns>Last_Name__c</columns>
    <columns>Recipient_Email__c</columns>
    <columns>Recipient_Group__c</columns>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Order__c</columns>
    <columns>IsActive__c</columns>
    <filterScope>Everything</filterScope>
    <label>all info</label>
    <language>en_US</language>
</ListView>